@@ -49,6 +49,7 @@ import org.weasis.base.explorer.Messages;
 import org.weasis.base.explorer.ThumbnailRenderer;
 import org.weasis.core.api.gui.util.AppProperties;
 import org.weasis.core.api.gui.util.GhostGlassPane;
+import org.weasis.core.api.gui.util.GuiUtils;
 import org.weasis.core.api.media.data.Codec;
 import org.weasis.core.api.media.data.ImageElement;
 import org.weasis.core.api.media.data.MediaElement;
@@ -56,8 +57,6 @@ import org.weasis.core.api.media.data.MediaReader;
 import org.weasis.core.api.media.data.MediaSeries;
 import org.weasis.core.api.media.data.TagUtil;
 import org.weasis.core.api.media.data.TagW;
-import org.weasis.core.api.util.LocalUtil;
-import org.weasis.core.ui.docking.UIManager;
 import org.weasis.core.ui.editor.SeriesViewerFactory;
 import org.weasis.core.ui.editor.ViewerPluginBuilder;
 import org.weasis.core.ui.util.DefaultAction;
@@ -69,7 +68,7 @@ public abstract class AbstractThumbnailList<E extends MediaElement> extends JLis
   public static final String SECTION_CHANGED = "SECTION_CHANGED"; // NON-NLS
   public static final String DIRECTORY_SIZE = "DIRECTORY_SIZE"; // NON-NLS
 
-  private static final NumberFormat intGroupFormat = LocalUtil.getIntegerInstance();
+  private static final NumberFormat intGroupFormat = NumberFormat.getIntegerInstance();
 
   static {
     intGroupFormat.setGroupingUsed(true);
@@ -332,14 +331,8 @@ public abstract class AbstractThumbnailList<E extends MediaElement> extends JLis
         }
       }
       if (!list.isEmpty()) {
-        Map<String, Object> props = Collections.synchronizedMap(new HashMap<>());
-        props.put(ViewerPluginBuilder.CMP_ENTRY_BUILD_NEW_VIEWER, compareEntryToBuildNewViewer);
-        props.put(ViewerPluginBuilder.BEST_DEF_LAYOUT, bestDefaultLayout);
-        props.put(ViewerPluginBuilder.SCREEN_BOUND, null);
-        if (inSelView) {
-          props.put(ViewerPluginBuilder.ADD_IN_SELECTED_VIEW, true);
-        }
-
+        Map<String, Object> props =
+            buildPropertiesMap(compareEntryToBuildNewViewer, bestDefaultLayout, inSelView);
         ArrayList<String> mimes = new ArrayList<>();
         for (MediaSeries s : list) {
           String mime = s.getMimeType();
@@ -348,7 +341,7 @@ public abstract class AbstractThumbnailList<E extends MediaElement> extends JLis
           }
         }
         for (String mime : mimes) {
-          SeriesViewerFactory plugin = UIManager.getViewerFactory(mime);
+          SeriesViewerFactory plugin = GuiUtils.getUICore().getViewerFactory(mime);
           if (plugin != null) {
             ArrayList<MediaSeries<MediaElement>> seriesList = new ArrayList<>();
             for (MediaSeries s : list) {
@@ -364,6 +357,18 @@ public abstract class AbstractThumbnailList<E extends MediaElement> extends JLis
         }
       }
     }
+  }
+
+  private Map<String, Object> buildPropertiesMap(
+      boolean compareEntryToBuildNewViewer, boolean bestDefaultLayout, boolean inSelView) {
+    Map<String, Object> props = Collections.synchronizedMap(new HashMap<>());
+    props.put(ViewerPluginBuilder.CMP_ENTRY_BUILD_NEW_VIEWER, compareEntryToBuildNewViewer);
+    props.put(ViewerPluginBuilder.BEST_DEF_LAYOUT, bestDefaultLayout);
+    props.put(ViewerPluginBuilder.SCREEN_BOUND, null);
+    if (inSelView) {
+      props.put(ViewerPluginBuilder.ADD_IN_SELECTED_VIEW, true);
+    }
+    return props;
   }
 
   public void openGroup(
@@ -382,7 +387,7 @@ public abstract class AbstractThumbnailList<E extends MediaElement> extends JLis
       for (E m : selMedias) {
         String mime = m.getMimeType();
         if (mime != null) {
-          SeriesViewerFactory plugin = UIManager.getViewerFactory(mime);
+          SeriesViewerFactory plugin = GuiUtils.getUICore().getViewerFactory(mime);
           if (plugin != null) {
             List<MediaSeries<MediaElement>> list =
                 plugins.computeIfAbsent(plugin, k -> new ArrayList<>(modeLayout ? 10 : 1));
@@ -404,7 +409,7 @@ public abstract class AbstractThumbnailList<E extends MediaElement> extends JLis
                   list.add(series);
                 }
               } else {
-                series = list.get(0);
+                series = list.getFirst();
                 if (series != null) {
                   MediaElement[] ms = mreader.getMediaElement();
                   if (ms != null) {
@@ -425,13 +430,8 @@ public abstract class AbstractThumbnailList<E extends MediaElement> extends JLis
         }
       }
 
-      Map<String, Object> props = Collections.synchronizedMap(new HashMap<>());
-      props.put(ViewerPluginBuilder.CMP_ENTRY_BUILD_NEW_VIEWER, compareEntryToBuildNewViewer);
-      props.put(ViewerPluginBuilder.BEST_DEF_LAYOUT, bestDefaultLayout);
-      props.put(ViewerPluginBuilder.SCREEN_BOUND, null);
-      if (inSelView) {
-        props.put(ViewerPluginBuilder.ADD_IN_SELECTED_VIEW, true);
-      }
+      Map<String, Object> props =
+          buildPropertiesMap(compareEntryToBuildNewViewer, bestDefaultLayout, inSelView);
 
       for (Entry<SeriesViewerFactory, List<MediaSeries<MediaElement>>> item : plugins.entrySet()) {
         ViewerPluginBuilder builder =
