@@ -9,16 +9,20 @@
  */
 package org.weasis.base.ui.gui;
 
+import static java.time.temporal.ChronoUnit.SECONDS;
+
 import bibliothek.extension.gui.dock.theme.EclipseTheme;
 import bibliothek.extension.gui.dock.theme.eclipse.EclipseTabDockActionLocation;
 import bibliothek.extension.gui.dock.theme.eclipse.EclipseTabStateInfo;
 import bibliothek.gui.dock.ScreenDockStation;
 import bibliothek.gui.dock.common.CControl;
 import bibliothek.gui.dock.common.CLocation;
+import bibliothek.gui.dock.common.CWorkingArea;
 import bibliothek.gui.dock.common.DefaultSingleCDockable;
 import bibliothek.gui.dock.common.action.CAction;
 import bibliothek.gui.dock.common.action.predefined.CCloseAction;
 import bibliothek.gui.dock.common.event.CFocusListener;
+import bibliothek.gui.dock.common.event.CVetoFocusListener;
 import bibliothek.gui.dock.common.intern.CDockable;
 import bibliothek.gui.dock.common.mode.ExtendedMode;
 import bibliothek.gui.dock.common.theme.ThemeMap;
@@ -27,6 +31,7 @@ import bibliothek.gui.dock.station.screen.BoundaryRestriction;
 import bibliothek.gui.dock.util.ConfiguredBackgroundPanel;
 import bibliothek.gui.dock.util.DirectWindowProvider;
 import bibliothek.gui.dock.util.DockUtilities;
+import com.fasterxml.jackson.databind.ObjectMapper;
 import com.formdev.flatlaf.extras.FlatSVGIcon;
 import java.awt.AWTException;
 import java.awt.BorderLayout;
@@ -44,7 +49,6 @@ import java.awt.Robot;
 import java.awt.Taskbar;
 import java.awt.Taskbar.Feature;
 import java.awt.Toolkit;
-import java.awt.datatransfer.DataFlavor;
 import java.awt.datatransfer.Transferable;
 import java.awt.event.ActionEvent;
 import java.awt.event.InputEvent;
@@ -52,16 +56,26 @@ import java.awt.event.KeyEvent;
 import java.awt.event.WindowAdapter;
 import java.awt.event.WindowEvent;
 import java.io.File;
+import java.io.IOException;
 import java.io.PrintStream;
 import java.lang.management.ManagementFactory;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
+import java.net.http.HttpResponse.BodyHandlers;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.Hashtable;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.Optional;
+import java.util.concurrent.CompletableFuture;
 import java.util.function.Consumer;
 import javax.management.InstanceNotFoundException;
 import javax.management.JMException;
@@ -69,9 +83,10 @@ import javax.management.MBeanServer;
 import javax.management.ObjectName;
 import javax.swing.Action;
 import javax.swing.Icon;
+import javax.swing.JCheckBox;
 import javax.swing.JCheckBoxMenuItem;
-import javax.swing.JComponent;
 import javax.swing.JFrame;
+import javax.swing.JLabel;
 import javax.swing.JMenu;
 import javax.swing.JMenuBar;
 import javax.swing.JMenuItem;
@@ -81,9 +96,13 @@ import javax.swing.JPopupMenu;
 import javax.swing.JSeparator;
 import javax.swing.KeyStroke;
 import javax.swing.RootPaneContainer;
-import javax.swing.TransferHandler;
 import javax.swing.TransferHandler.DropLocation;
 import javax.swing.WindowConstants;
+import org.osgi.framework.BundleContext;
+import org.osgi.framework.FrameworkUtil;
+import org.osgi.framework.InvalidSyntaxException;
+import org.osgi.framework.ServiceReference;
+import org.osgi.framework.Version;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.weasis.base.ui.Messages;
@@ -94,6 +113,8 @@ import org.weasis.core.api.explorer.model.DataExplorerModel;
 import org.weasis.core.api.explorer.model.TreeModel;
 import org.weasis.core.api.explorer.model.TreeModelNode;
 import org.weasis.core.api.gui.Insertable;
+import org.weasis.core.api.gui.LicenseTabFactory;
+import org.weasis.core.api.gui.util.AbstractTabLicense;
 import org.weasis.core.api.gui.util.AppProperties;
 import org.weasis.core.api.gui.util.DynamicMenu;
 import org.weasis.core.api.gui.util.GuiExecutor;
@@ -106,17 +127,19 @@ import org.weasis.core.api.media.data.MediaSeries;
 import org.weasis.core.api.media.data.MediaSeriesGroup;
 import org.weasis.core.api.media.data.Series;
 import org.weasis.core.api.media.data.TagW;
-import org.weasis.core.api.service.BundleTools;
+import org.weasis.core.api.service.UICore;
+import org.weasis.core.api.service.WProperties;
 import org.weasis.core.api.util.ResourceUtil;
 import org.weasis.core.api.util.ResourceUtil.ActionIcon;
 import org.weasis.core.api.util.ResourceUtil.LogoIcon;
 import org.weasis.core.ui.docking.DockableTool;
-import org.weasis.core.ui.docking.UIManager;
 import org.weasis.core.ui.editor.MimeSystemAppViewer;
 import org.weasis.core.ui.editor.SeriesViewer;
 import org.weasis.core.ui.editor.SeriesViewerFactory;
+import org.weasis.core.ui.editor.SeriesViewerUI;
 import org.weasis.core.ui.editor.ViewerPluginBuilder;
 import org.weasis.core.ui.editor.image.ImageViewerPlugin;
+import org.weasis.core.ui.editor.image.SequenceHandler;
 import org.weasis.core.ui.editor.image.ViewCanvas;
 import org.weasis.core.ui.editor.image.ViewerPlugin;
 import org.weasis.core.ui.pref.Monitor;
@@ -125,7 +148,6 @@ import org.weasis.core.ui.util.ColorLayerUI;
 import org.weasis.core.ui.util.DefaultAction;
 import org.weasis.core.ui.util.ToolBarContainer;
 import org.weasis.core.ui.util.Toolbar;
-import org.weasis.core.ui.util.UriListFlavor;
 import org.weasis.core.util.LangUtil;
 import org.weasis.core.util.StringUtil;
 import org.weasis.core.util.StringUtil.Suffix;
@@ -146,8 +168,6 @@ public class WeasisWin {
         }
       };
   private ViewerPlugin<?> selectedPlugin = null;
-
-  private final ToolBarContainer toolbarContainer;
 
   private final List<Runnable> runOnClose = new ArrayList<>();
 
@@ -198,24 +218,31 @@ public class WeasisWin {
         new WindowAdapter() {
           @Override
           public void windowClosing(WindowEvent e) {
-            closeWindow();
+            if (canBeClosed()) {
+              closeAllRunnable();
+            }
           }
         });
     rootPaneContainer = jFrame;
 
-    if (BundleTools.SYSTEM_PREFERENCES.getBooleanProperty("weasis.menu.menubar", true)) {
+    if (GuiUtils.getUICore()
+        .getSystemPreferences()
+        .getBooleanProperty("weasis.menu.menubar", true)) {
       rootPaneContainer.getRootPane().setJMenuBar(createMenuBar());
     }
-    toolbarContainer = new ToolBarContainer();
     setSelectedPlugin(null);
-    rootPaneContainer.getContentPane().add(toolbarContainer, BorderLayout.NORTH);
+    rootPaneContainer
+        .getContentPane()
+        .add(GuiUtils.getUICore().getToolbarContainer(), BorderLayout.NORTH);
 
     rootPaneContainer.setGlassPane(AppProperties.glassPane);
 
     frame.setTitle(AppProperties.WEASIS_NAME + " v" + AppProperties.WEASIS_VERSION); // NON-NLS
 
     LogoIcon logoIcon =
-        AppProperties.WEASIS_NAME.endsWith("Dicomizer") ? LogoIcon.SMALL_DICOMIZER : LogoIcon.SMALL;
+        AppProperties.WEASIS_NAME.endsWith("Dicomizer") // NON-NLS
+            ? LogoIcon.SMALL_DICOMIZER
+            : LogoIcon.SMALL;
     // Get larger icon (displayed in system toolbar)
     FlatSVGIcon imageIcon = ResourceUtil.getIcon(logoIcon, 512, 512);
     boolean taskBarIcon = false;
@@ -245,33 +272,28 @@ public class WeasisWin {
   }
 
   public ToolBarContainer getToolbarContainer() {
-    return toolbarContainer;
+    return GuiUtils.getUICore().getToolbarContainer();
   }
 
-  public boolean closeWindow() {
-    boolean busy = false;
-    if (!busy) {
-      if (BundleTools.SYSTEM_PREFERENCES.getBooleanProperty(BundleTools.CONFIRM_CLOSE, false)) {
-        int option = JOptionPane.showConfirmDialog(frame, Messages.getString("WeasisWin.exit_mes"));
-        if (option == JOptionPane.YES_OPTION) {
-          closeAllRunnable();
-          return true;
-        }
-      } else {
-        closeAllRunnable();
-        return true;
-      }
+  public boolean canBeClosed() {
+    if (GuiUtils.getUICore()
+        .getSystemPreferences()
+        .getBooleanProperty(UICore.CONFIRM_CLOSE, false)) {
+      int option = JOptionPane.showConfirmDialog(frame, Messages.getString("WeasisWin.exit_mes"));
+      return option == JOptionPane.YES_OPTION;
+    } else {
+      return true;
     }
-    return false;
   }
 
-  private void closeAllRunnable() {
-    BundleTools.LOCAL_UI_PERSISTENCE.putIntProperty("last.window.state", frame.getExtendedState());
+  void closeAllRunnable() {
+    WProperties localPersistence = GuiUtils.getUICore().getLocalPersistence();
+    localPersistence.putIntProperty("last.window.state", frame.getExtendedState());
     Rectangle rect = frame.getBounds();
-    BundleTools.LOCAL_UI_PERSISTENCE.putIntProperty("last.window.x", rect.x);
-    BundleTools.LOCAL_UI_PERSISTENCE.putIntProperty("last.window.y", rect.y);
-    BundleTools.LOCAL_UI_PERSISTENCE.putIntProperty("last.window.width", rect.width);
-    BundleTools.LOCAL_UI_PERSISTENCE.putIntProperty("last.window.height", rect.height);
+    localPersistence.putIntProperty("last.window.x", rect.x);
+    localPersistence.putIntProperty("last.window.y", rect.y);
+    localPersistence.putIntProperty("last.window.width", rect.width);
+    localPersistence.putIntProperty("last.window.height", rect.height);
     for (Runnable onClose : runOnClose) {
       onClose.run();
     }
@@ -292,7 +314,7 @@ public class WeasisWin {
     if (System.getProperty("maven.localRepository") == null) {
       DockUtilities.disableCheckLayoutLocked();
     }
-    CControl control = UIManager.DOCKING_CONTROL;
+    CControl control = GuiUtils.getUICore().getDockingControl();
     control.setRootWindow(new DirectWindowProvider(frame));
     destroyOnClose(control);
     ThemeMap themes = control.getThemes();
@@ -301,18 +323,22 @@ public class WeasisWin {
     control.putProperty(ScreenDockStation.BOUNDARY_RESTRICTION, BoundaryRestriction.HARD);
     control.putProperty(EclipseTheme.THEME_CONNECTOR, new HidingEclipseThemeConnector(control));
 
-    // control.setGroupBehavior(CGroupBehavior.TOPMOST);
-    // control.setDefaultLocation(centerArea.getStationLocation());
-
     control.addFocusListener(selectionListener);
 
-    // control.setDefaultLocation(UIManager.BASE_AREA.
-    // this.add(UIManager.EAST_AREA, BorderLayout.EAST);
-    rootPaneContainer.getContentPane().add(UIManager.BASE_AREA, BorderLayout.CENTER);
+    rootPaneContainer.getContentPane().add(GuiUtils.getUICore().getBaseArea(), BorderLayout.CENTER);
     // Allow dropping series into the empty main area
-    UIManager.MAIN_AREA.getComponent().setTransferHandler(new SequenceHandler());
-    UIManager.MAIN_AREA.setLocation(CLocation.base().normalRectangle(0, 0, 1, 1));
-    UIManager.MAIN_AREA.setVisible(true);
+    CWorkingArea mainArea = GuiUtils.getUICore().getMainArea();
+    mainArea.getComponent().setTransferHandler(new SeriesHandler());
+    mainArea.setLocation(CLocation.base().normalRectangle(0, 0, 1, 1));
+    mainArea.setVisible(true);
+
+    WProperties preferences = GuiUtils.getUICore().getSystemPreferences();
+    boolean updateRelease = preferences.getBooleanProperty("weasis.update.release", true);
+    boolean showDownloadRelease =
+        preferences.getBooleanProperty("weasis.show.update.next.release", true);
+    if (updateRelease && showDownloadRelease) {
+      CompletableFuture.runAsync(() -> checkReleaseUpdate(frame));
+    }
   }
 
   HashMap<MediaSeriesGroup, List<MediaSeries<?>>> getSeriesByEntry(
@@ -346,12 +372,13 @@ public class WeasisWin {
     if (screenBound == null && group != null) {
       boolean bestDefaultLayout =
           LangUtil.getNULLtoTrue((Boolean) props.get(ViewerPluginBuilder.BEST_DEF_LAYOUT));
-      synchronized (UIManager.VIEWER_PLUGINS) {
-        for (int i = UIManager.VIEWER_PLUGINS.size() - 1; i >= 0; i--) {
-          final ViewerPlugin<?> p = UIManager.VIEWER_PLUGINS.get(i);
+      List<ViewerPlugin<?>> viewerPlugins = GuiUtils.getUICore().getViewerPlugins();
+      synchronized (viewerPlugins) {
+        for (int i = viewerPlugins.size() - 1; i >= 0; i--) {
+          final ViewerPlugin<?> p = viewerPlugins.get(i);
           // Remove the views not attached to any window (Fix bugs with external window)
           if (WinUtil.getParentWindow(p) == null) {
-            UIManager.VIEWER_PLUGINS.remove(i);
+            viewerPlugins.remove(i);
             continue;
           }
           if (p instanceof ImageViewerPlugin viewer
@@ -453,15 +480,10 @@ public class WeasisWin {
     GraphicsEnvironment ge = GraphicsEnvironment.getLocalGraphicsEnvironment();
     GraphicsDevice[] gd = ge.getScreenDevices();
     if (gd.length > 1) {
-      // dockable.setExternalizable(true);
       Rectangle bound = WinUtil.getClosedScreenBound(rootPaneContainer.getRootPane().getBounds());
-      // LocationHint hint =
-      // new LocationHint(LocationHint.DOCKABLE,
-      // bibliothek.gui.dock.action.LocationHint.LEFT_OF_ALL);
-      // DefaultDockActionSource source = new DefaultDockActionSource(hint);
-      // source.add(setupDropDownMenu(viewer.getDockable()));
-      // source.addSeparator();
-
+      if (bound == null) {
+        return;
+      }
       for (GraphicsDevice graphicsDevice : gd) {
         GraphicsConfiguration config = graphicsDevice.getDefaultConfiguration();
         final Rectangle b = config.getBounds();
@@ -474,20 +496,6 @@ public class WeasisWin {
           dockable.setDefaultLocation(
               ExtendedMode.EXTERNALIZED,
               CLocation.external(b.x, b.y, b.width - 150, b.height - 150));
-
-          // GuiExecutor.instance().execute(new Runnable() {
-          //
-          // @Override
-          // public void run() {
-          // if (dockable.isVisible()) {
-          // dockable.setLocation(CLocation.external(b.x, b.y, b.width - 150, b.height - 150));
-          // UIManager.DOCKING_CONTROL.addVetoFocusListener(UIManager.DOCKING_VETO_FOCUS);
-          // dockable.setExtendedMode(ExtendedMode.MAXIMIZED);
-          // UIManager.DOCKING_CONTROL.removeVetoFocusListener(UIManager.DOCKING_VETO_FOCUS);
-          // }
-          // }
-          // });
-          // source.add(new CloseAction(UIManager.DOCKING_CONTROLLER));
           break;
         }
       }
@@ -497,10 +505,10 @@ public class WeasisWin {
   private static boolean registerDetachWindow(final ViewerPlugin plugin, Rectangle screenBound) {
     if (plugin != null && screenBound != null) {
       ViewerPlugin oldWin = null;
-
-      synchronized (UIManager.VIEWER_PLUGINS) {
-        for (int i = UIManager.VIEWER_PLUGINS.size() - 1; i >= 0; i--) {
-          ViewerPlugin p = UIManager.VIEWER_PLUGINS.get(i);
+      List<ViewerPlugin<?>> viewerPlugins = GuiUtils.getUICore().getViewerPlugins();
+      synchronized (viewerPlugins) {
+        for (int i = viewerPlugins.size() - 1; i >= 0; i--) {
+          ViewerPlugin p = viewerPlugins.get(i);
           if (p.getDockable().isExternalizable()) {
             Dialog dialog = WinUtil.getParentDialog(p);
             if (dialog != null
@@ -520,15 +528,16 @@ public class WeasisWin {
             CLocation.external(
                 screenBound.x, screenBound.y, screenBound.width - 150, screenBound.height - 150));
         plugin.showDockable();
-        GuiExecutor.instance()
-            .execute(
-                () -> {
-                  if (dock.isVisible()) {
-                    UIManager.DOCKING_CONTROL.addVetoFocusListener(UIManager.DOCKING_VETO_FOCUS);
-                    dock.setExtendedMode(ExtendedMode.MAXIMIZED);
-                    UIManager.DOCKING_CONTROL.removeVetoFocusListener(UIManager.DOCKING_VETO_FOCUS);
-                  }
-                });
+        GuiExecutor.execute(
+            () -> {
+              if (dock.isVisible()) {
+                CControl control = GuiUtils.getUICore().getDockingControl();
+                CVetoFocusListener vetoFocus = GuiUtils.getUICore().getDockingVetoFocus();
+                control.addVetoFocusListener(vetoFocus);
+                dock.setExtendedMode(ExtendedMode.MAXIMIZED);
+                control.removeVetoFocusListener(vetoFocus);
+              }
+            });
       } else {
         ConfiguredBackgroundPanel parent =
             WinUtil.getParentOfClass(oldWin, ConfiguredBackgroundPanel.class);
@@ -547,7 +556,7 @@ public class WeasisWin {
   }
 
   public boolean registerPlugin(final ViewerPlugin plugin) {
-    if (plugin == null || UIManager.VIEWER_PLUGINS.contains(plugin)) {
+    if (plugin == null || GuiUtils.getUICore().getViewerPlugins().contains(plugin)) {
       return false;
     }
     plugin.showDockable();
@@ -560,8 +569,11 @@ public class WeasisWin {
 
   public synchronized void setSelectedPlugin(ViewerPlugin plugin) {
     if (plugin == null) {
-      toolbarContainer.registerToolBar(UIManager.EXPLORER_PLUGIN_TOOLBARS);
-      List<DockableTool> oldTool = selectedPlugin == null ? null : selectedPlugin.getToolPanel();
+      GuiUtils.getUICore()
+          .getToolbarContainer()
+          .registerToolBar(GuiUtils.getUICore().getExplorerPluginToolbars());
+      List<DockableTool> oldTool =
+          selectedPlugin == null ? null : selectedPlugin.getSeriesViewerUI().tools;
       if (oldTool != null) {
         for (DockableTool p : oldTool) {
           p.closeDockable();
@@ -572,42 +584,20 @@ public class WeasisWin {
     }
     if (selectedPlugin == plugin) {
       plugin.requestFocusInWindow();
+      selectedPlugin.setSelected(true);
       return;
     }
-    ViewerPlugin oldPlugin = selectedPlugin;
-    if (selectedPlugin != null) {
-      selectedPlugin.setSelected(false);
+    ViewerPlugin<?> oldPlugin = selectedPlugin;
+    if (oldPlugin != null) {
+      oldPlugin.setSelected(false);
     }
     selectedPlugin = plugin;
-    selectedPlugin.setSelected(true);
     menuSelectedPlugin.setText(selectedPlugin.getName());
 
-    List<DockableTool> tool = selectedPlugin.getToolPanel();
-    List<DockableTool> oldTool = oldPlugin == null ? null : oldPlugin.getToolPanel();
+    SeriesViewerUI.updateTools(oldPlugin, selectedPlugin, false);
+    SeriesViewerUI.updateToolbars(oldPlugin, selectedPlugin, false);
 
-    if (tool != oldTool) {
-      if (oldTool != null) {
-        for (DockableTool p : oldTool) {
-          p.closeDockable();
-        }
-      }
-      if (tool != null) {
-        for (DockableTool p : tool) {
-          if (p.isComponentEnabled()) {
-            p.showDockable();
-          }
-        }
-      }
-    }
-
-    updateToolbars(
-        oldPlugin == null ? null : oldPlugin.getToolBar(), selectedPlugin.getToolBar(), false);
-  }
-
-  void updateToolbars(List<Toolbar> oldToolBars, List<Toolbar> toolBars, boolean force) {
-    if (force || toolBars != oldToolBars) {
-      toolbarContainer.registerToolBar(toolBars);
-    }
+    selectedPlugin.setSelected(true);
   }
 
   public void showWindow() {
@@ -623,8 +613,8 @@ public class WeasisWin {
       config = defMonitor.getGraphicsConfiguration();
     }
 
-    int lastState =
-        BundleTools.LOCAL_UI_PERSISTENCE.getIntProperty("last.window.state", Frame.MAXIMIZED_BOTH);
+    WProperties localPersistence = GuiUtils.getUICore().getLocalPersistence();
+    int lastState = localPersistence.getIntProperty("last.window.state", Frame.MAXIMIZED_BOTH);
     if (lastState != Frame.NORMAL) {
       lastState = Frame.MAXIMIZED_BOTH;
     }
@@ -637,13 +627,10 @@ public class WeasisWin {
       b.width -= (inset.left + inset.right);
       b.height -= (inset.top + inset.bottom);
       if (lastState == Frame.NORMAL) {
-        int x = BundleTools.LOCAL_UI_PERSISTENCE.getIntProperty("last.window.x", 0);
-        int y = BundleTools.LOCAL_UI_PERSISTENCE.getIntProperty("last.window.y", 0);
-        int w =
-            BundleTools.LOCAL_UI_PERSISTENCE.getIntProperty("last.window.width", Integer.MAX_VALUE);
-        int h =
-            BundleTools.LOCAL_UI_PERSISTENCE.getIntProperty(
-                "last.window.height", Integer.MAX_VALUE);
+        int x = localPersistence.getIntProperty("last.window.x", 0);
+        int y = localPersistence.getIntProperty("last.window.y", 0);
+        int w = localPersistence.getIntProperty("last.window.width", Integer.MAX_VALUE);
+        int h = localPersistence.getIntProperty("last.window.height", Integer.MAX_VALUE);
         if (x < b.x) {
           x = b.x;
         }
@@ -688,6 +675,8 @@ public class WeasisWin {
     menuBar.add(menuSelectedPlugin);
     menuSelectedPlugin.addPopupMenuListener();
 
+    WProperties preferences = GuiUtils.getUICore().getSystemPreferences();
+
     final JMenu helpMenuItem = new JMenu(Messages.getString("WeasisWin.help"));
     final String helpURL = System.getProperty("weasis.help.url");
     if (helpURL != null) {
@@ -698,9 +687,7 @@ public class WeasisWin {
 
     final JMenuItem webMenuItem = new JMenuItem(Messages.getString("WeasisWin.shortcuts"));
     webMenuItem.addActionListener(
-        e ->
-            openBrowser(
-                webMenuItem, BundleTools.SYSTEM_PREFERENCES.getProperty("weasis.help.shortcuts")));
+        e -> openBrowser(webMenuItem, preferences.getProperty("weasis.help.shortcuts")));
     helpMenuItem.add(webMenuItem);
 
     final JMenuItem websiteMenuItem =
@@ -708,10 +695,83 @@ public class WeasisWin {
             Messages.getString("WeasisWin.online"), ResourceUtil.getIcon(ActionIcon.HELP));
     GuiUtils.applySelectedIconEffect(websiteMenuItem);
     websiteMenuItem.addActionListener(
-        e ->
-            openBrowser(
-                websiteMenuItem, BundleTools.SYSTEM_PREFERENCES.getProperty("weasis.help.online")));
+        e -> openBrowser(websiteMenuItem, preferences.getProperty("weasis.help.online")));
     helpMenuItem.add(websiteMenuItem);
+    helpMenuItem.add(new JSeparator());
+
+    final JMenuItem updateMenuItem = new JMenuItem(Messages.getString("check.for.updates"));
+    updateMenuItem.addActionListener(
+        e -> {
+          Release release = getLastRelease();
+          if (release != null) {
+            Version vOld = AppProperties.getVersion(AppProperties.WEASIS_VERSION);
+            Version vNew = AppProperties.getVersion(release.getVersion());
+            if (vNew.compareTo(vOld) > 0) {
+              openBrowser(updateMenuItem, release.getUrl());
+            } else {
+              GuiExecutor.execute(
+                  () ->
+                      JOptionPane.showMessageDialog(
+                          WinUtil.getValidComponent(updateMenuItem),
+                          Messages.getString("current.release.latest"),
+                          Messages.getString("update"),
+                          JOptionPane.INFORMATION_MESSAGE));
+            }
+          }
+        });
+    helpMenuItem.add(updateMenuItem);
+
+    final JMenuItem openLogFolderMenuItem =
+        new JMenuItem(Messages.getString("open.logging.folder"));
+    openLogFolderMenuItem.addActionListener(
+        e ->
+            GuiUtils.openSystemExplorer(
+                openLogFolderMenuItem, new File(AppProperties.WEASIS_PATH, "log")));
+    helpMenuItem.add(openLogFolderMenuItem);
+
+    final JMenuItem reportMenuItem = new JMenuItem(Messages.getString("submit.bug.report"));
+    reportMenuItem.addActionListener(
+        e -> openBrowser(reportMenuItem, "https://github.com/nroduit/Weasis/issues"));
+    helpMenuItem.add(reportMenuItem);
+    helpMenuItem.add(new JSeparator());
+    WProperties p = GuiUtils.getUICore().getSystemPreferences();
+    if (p.getBooleanProperty("weasis.plugins.license", false)) {
+      final JMenuItem licencesMenuItem = new JMenuItem(Messages.getString("LicencesDialog.title"));
+      licencesMenuItem.addActionListener(
+          e -> {
+            ColorLayerUI layer = ColorLayerUI.createTransparentLayerUI(rootPaneContainer);
+            final List<AbstractTabLicense> list = new ArrayList<>();
+            try {
+              BundleContext context = FrameworkUtil.getBundle(this.getClass()).getBundleContext();
+              Hashtable<String, Object> properties = new Hashtable<>();
+              for (ServiceReference<LicenseTabFactory> service :
+                  context.getServiceReferences(LicenseTabFactory.class, null)) {
+                LicenseTabFactory factory = context.getService(service);
+                if (factory != null) {
+                  AbstractTabLicense page = factory.createInstance(properties);
+                  if (page != null) {
+                    list.add(page);
+                  }
+                }
+              }
+            } catch (InvalidSyntaxException ex) {
+              LOGGER.error("Get License from OSGI service", ex);
+            }
+            if (list.isEmpty()) {
+              JOptionPane.showMessageDialog(
+                  WinUtil.getValidComponent(licencesMenuItem),
+                  Messages.getString("LicencesDialog.no.licence"),
+                  Messages.getString("LicencesDialog.title"),
+                  JOptionPane.INFORMATION_MESSAGE);
+            } else {
+              LicencesDialog dialog = new LicencesDialog(getFrame(), list);
+              ColorLayerUI.showCenterScreen(dialog, layer);
+            }
+          });
+      helpMenuItem.add(licencesMenuItem);
+      helpMenuItem.add(new JSeparator());
+    }
+
     final JMenuItem aboutMenuItem =
         new JMenuItem(
             String.format(Messages.getString("WeasisAboutBox.about"), AppProperties.WEASIS_NAME));
@@ -726,6 +786,68 @@ public class WeasisWin {
     return menuBar;
   }
 
+  private Release getRelease(String body) {
+    ObjectMapper mapper = new ObjectMapper();
+    try {
+      return mapper.readValue(body, Release.class);
+    } catch (IOException ex) {
+      LOGGER.error("Cannot read the json response", ex);
+    }
+    return null;
+  }
+
+  private Release getLastRelease() {
+    try {
+      HttpRequest request =
+          HttpRequest.newBuilder()
+              .uri(new URI("https://nroduit.github.io/en/api/release/api.json"))
+              .timeout(Duration.of(10, SECONDS))
+              .GET()
+              .build();
+
+      HttpResponse<String> response =
+          HttpClient.newBuilder()
+              .followRedirects(HttpClient.Redirect.ALWAYS)
+              .build()
+              .send(request, BodyHandlers.ofString());
+      return getRelease(response.body());
+    } catch (IOException | URISyntaxException ex) {
+      LOGGER.error("Cannot check release update", ex);
+    } catch (InterruptedException ex2) {
+      Thread.currentThread().interrupt();
+    }
+    return null;
+  }
+
+  private void checkReleaseUpdate(Component parent) {
+    Release release = getLastRelease();
+    if (release != null) {
+      Version vOld = AppProperties.getVersion(AppProperties.WEASIS_VERSION);
+      Version vNew = AppProperties.getVersion(release.getVersion());
+      if (vNew.compareTo(vOld) > 0) {
+        GuiExecutor.execute(
+            () -> {
+              JLabel label = new JLabel(Messages.getString("new.release.available"));
+              label.setAlignmentX(JLabel.RIGHT_ALIGNMENT);
+              JCheckBox dontAskMeAgain = new JCheckBox(Messages.getString("don.t.ask.again"));
+              dontAskMeAgain.setAlignmentX(JLabel.RIGHT_ALIGNMENT);
+              JPanel panel = GuiUtils.getVerticalBoxLayoutPanel(label, dontAskMeAgain);
+              int confirm =
+                  JOptionPane.showConfirmDialog(
+                      parent, panel, Messages.getString("update"), JOptionPane.YES_NO_OPTION);
+              if (confirm == 0) {
+                openBrowser(parent, release.getUrl());
+              }
+              if (dontAskMeAgain.isSelected()) {
+                GuiUtils.getUICore()
+                    .getSystemPreferences()
+                    .putBooleanProperty("weasis.show.update.next.release", false);
+              }
+            });
+      }
+    }
+  }
+
   private void openBrowser(Component c, String ref) {
     try {
       URL url = new URL(ref);
@@ -736,7 +858,7 @@ public class WeasisWin {
   }
 
   private void buildToolBarSubMenu(final JMenu toolBarMenu) {
-    List<Toolbar> bars = toolbarContainer.getRegisteredToolBars();
+    List<Toolbar> bars = GuiUtils.getUICore().getToolbarContainer().getRegisteredToolBars();
     for (final Toolbar bar : bars) {
       if (!Insertable.Type.EMPTY.equals(bar.getType())) {
         JCheckBoxMenuItem item =
@@ -744,7 +866,9 @@ public class WeasisWin {
         item.addActionListener(
             e -> {
               if (e.getSource() instanceof JCheckBoxMenuItem menuItem) {
-                toolbarContainer.displayToolbar(bar.getComponent(), menuItem.isSelected());
+                GuiUtils.getUICore()
+                    .getToolbarContainer()
+                    .displayToolbar(bar.getComponent(), menuItem.isSelected());
               }
             });
         toolBarMenu.add(item);
@@ -753,7 +877,8 @@ public class WeasisWin {
   }
 
   private void buildToolSubMenu(final JMenu toolMenu) {
-    List<DockableTool> tools = selectedPlugin == null ? null : selectedPlugin.getToolPanel();
+    List<DockableTool> tools =
+        selectedPlugin == null ? null : selectedPlugin.getSeriesViewerUI().tools;
     if (tools != null) {
       for (final DockableTool t : tools) {
         buildSubMenu(toolMenu, t);
@@ -762,8 +887,8 @@ public class WeasisWin {
   }
 
   private static void buildExplorerSubMenu(final JMenu explorerMenu) {
-    synchronized (UIManager.EXPLORER_PLUGINS) {
-      List<DataExplorerView> explorers = UIManager.EXPLORER_PLUGINS;
+    synchronized (GuiUtils.getUICore().getExplorerPlugins()) {
+      List<DataExplorerView> explorers = GuiUtils.getUICore().getExplorerPlugins();
       for (final DataExplorerView dataExplorerView : explorers) {
         if (dataExplorerView instanceof final DockableTool t) {
           buildSubMenu(explorerMenu, t);
@@ -797,18 +922,24 @@ public class WeasisWin {
   }
 
   private static void buildOpenSubMenu(final JMenu importMenu) {
-    UIManager.SERIES_VIEWER_FACTORIES.forEach(d -> fillMenu(importMenu, d.getOpenActions()));
+    GuiUtils.getUICore()
+        .getSeriesViewerFactories()
+        .forEach(d -> fillMenu(importMenu, d.getOpenActions()));
   }
 
   private static void buildImportSubMenu(final JMenu importMenu) {
-    UIManager.EXPLORER_PLUGINS.forEach(d -> fillMenu(importMenu, d.getOpenImportDialogAction()));
+    GuiUtils.getUICore()
+        .getExplorerPlugins()
+        .forEach(d -> fillMenu(importMenu, d.getOpenImportDialogAction()));
   }
 
   private void buildExportSubMenu(final JMenu exportMenu) {
     if (selectedPlugin != null) {
       fillMenu(exportMenu, selectedPlugin.getExportActions());
     }
-    UIManager.EXPLORER_PLUGINS.forEach(d -> fillMenu(exportMenu, d.getOpenExportDialogAction()));
+    GuiUtils.getUICore()
+        .getExplorerPlugins()
+        .forEach(d -> fillMenu(exportMenu, d.getOpenExportDialogAction()));
   }
 
   private static void fillMenu(final JMenu menu, List<Action> actions) {
@@ -921,79 +1052,34 @@ public class WeasisWin {
         };
     DefaultAction preferencesAction =
         new DefaultAction(
-            org.weasis.core.ui.Messages.getString("OpenPreferencesAction.title"), prefAction);
+            org.weasis.core.Messages.getString("OpenPreferencesAction.title"), prefAction);
     preferencesAction.putValue(
         Action.ACCELERATOR_KEY, KeyStroke.getKeyStroke(KeyEvent.VK_P, InputEvent.ALT_DOWN_MASK));
     menuFile.add(new JMenuItem(preferencesAction));
 
     menuFile.add(new JSeparator());
     DefaultAction exitAction =
-        new DefaultAction(Messages.getString("ExitAction.title"), e -> closeWindow());
+        new DefaultAction(
+            Messages.getString("ExitAction.title"),
+            e -> {
+              if (canBeClosed()) {
+                closeAllRunnable();
+              }
+            });
     menuFile.add(new JMenuItem(exitAction));
   }
 
-  private class SequenceHandler extends TransferHandler {
-
-    public SequenceHandler() {
-      super("series"); // NON-NLS
-    }
+  private class SeriesHandler extends SequenceHandler {
 
     @Override
-    public Transferable createTransferable(JComponent comp) {
-      return null;
-    }
-
-    @Override
-    public boolean canImport(TransferSupport support) {
-      if (!support.isDrop()) {
-        return false;
-      }
-      return support.isDataFlavorSupported(Series.sequenceDataFlavor)
-          || support.isDataFlavorSupported(DataFlavor.javaFileListFlavor)
-          || support.isDataFlavorSupported(UriListFlavor.flavor);
-    }
-
-    @Override
-    public boolean importData(TransferSupport support) {
-      if (!canImport(support)) {
-        return false;
-      }
-
+    protected boolean importDataExt(TransferSupport support) {
       Transferable transferable = support.getTransferable();
-
-      List<File> files = null;
-      // Not supported by some OS
-      if (support.isDataFlavorSupported(DataFlavor.javaFileListFlavor)) {
-        try {
-          files = (List<File>) transferable.getTransferData(DataFlavor.javaFileListFlavor);
-        } catch (Exception e) {
-          LOGGER.error("Get draggable files", e);
-        }
-        return dropFiles(files, support.getDropLocation());
-      }
-      // When dragging a file or group of files
-      // http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=4899516
-      else if (support.isDataFlavorSupported(UriListFlavor.flavor)) {
-        try {
-          // Files with spaces in the filename trigger an error
-          // http://bugs.sun.com/bugdatabase/view_bug.do?bug_id=6936006
-          String val = (String) transferable.getTransferData(UriListFlavor.flavor);
-          files = UriListFlavor.textURIListToFileList(val);
-        } catch (Exception e) {
-          LOGGER.error("Get draggable URIs", e);
-        }
-        return dropFiles(files, support.getDropLocation());
-      }
-
       Series seq;
       try {
         seq = (Series) transferable.getTransferData(Series.sequenceDataFlavor);
-        if (seq == null) {
-          return false;
-        }
-
-        synchronized (UIManager.SERIES_VIEWER_FACTORIES) {
-          for (final SeriesViewerFactory factory : UIManager.SERIES_VIEWER_FACTORIES) {
+        List<SeriesViewerFactory> viewerFactories = GuiUtils.getUICore().getSeriesViewerFactories();
+        synchronized (viewerFactories) {
+          for (final SeriesViewerFactory factory : viewerFactories) {
             if (factory.canReadMimeType(seq.getMimeType())) {
               DataExplorerModel model = (DataExplorerModel) seq.getTagValue(TagW.ExplorerModel);
               if (model instanceof TreeModel treeModel) {
@@ -1017,69 +1103,72 @@ public class WeasisWin {
       }
       return true;
     }
-  }
 
-  protected boolean dropFiles(final List<File> files, DropLocation dropLocation) {
-    if (files != null) {
-      List<DataExplorerView> explorers = new ArrayList<>(UIManager.EXPLORER_PLUGINS);
-      for (int i = explorers.size() - 1; i >= 0; i--) {
-        if (!explorers.get(i).canImportFiles()) {
-          explorers.remove(i);
-        }
-      }
-
-      final List<File> dirs = new ArrayList<>();
-      Map<Codec, List<File>> codecs = new HashMap<>();
-      for (File file : files) {
-        if (file.isDirectory()) {
-          dirs.add(file);
-          continue;
-        }
-        MediaReader reader = ViewerPluginBuilder.getMedia(file, false);
-        if (reader != null) {
-          Codec c = reader.getCodec();
-          if (c != null) {
-            List<File> cFiles = codecs.computeIfAbsent(c, k -> new ArrayList<>());
-            cFiles.add(file);
+    @Override
+    protected boolean dropFiles(List<File> files, TransferSupport support) {
+      if (files != null) {
+        DropLocation dropLocation = support.getDropLocation();
+        List<DataExplorerView> explorers =
+            new ArrayList<>(GuiUtils.getUICore().getExplorerPlugins());
+        for (int i = explorers.size() - 1; i >= 0; i--) {
+          if (!explorers.get(i).canImportFiles()) {
+            explorers.remove(i);
           }
         }
-      }
 
-      if (!dirs.isEmpty() && !explorers.isEmpty()) {
-        importInExplorer(explorers, dirs, dropLocation);
-      }
-
-      for (Entry<Codec, List<File>> entry : codecs.entrySet()) {
-        final List<File> vals = entry.getValue();
-
-        List<DataExplorerView> exps = new ArrayList<>();
-        for (final DataExplorerView dataExplorerView : explorers) {
-          DataExplorerModel model = dataExplorerView.getDataExplorerModel();
-          if (model != null) {
-            List<Codec> cList = model.getCodecPlugins();
-            if (cList != null && cList.contains(entry.getKey())) {
-              exps.add(dataExplorerView);
+        final List<File> dirs = new ArrayList<>();
+        Map<Codec, List<File>> codecs = new HashMap<>();
+        for (File file : files) {
+          if (file.isDirectory()) {
+            dirs.add(file);
+            continue;
+          }
+          MediaReader reader = ViewerPluginBuilder.getMedia(file, false);
+          if (reader != null) {
+            Codec c = reader.getCodec();
+            if (c != null) {
+              List<File> cFiles = codecs.computeIfAbsent(c, k -> new ArrayList<>());
+              cFiles.add(file);
             }
           }
         }
 
-        if (exps.isEmpty()) {
-          for (File file : vals) {
-            ViewerPluginBuilder.openSequenceInDefaultPlugin(file, true, true);
-          }
-        } else {
-          importInExplorer(exps, vals, dropLocation);
+        if (!dirs.isEmpty() && !explorers.isEmpty()) {
+          importInExplorer(explorers, dirs, dropLocation);
         }
+
+        for (Entry<Codec, List<File>> entry : codecs.entrySet()) {
+          final List<File> vals = entry.getValue();
+
+          List<DataExplorerView> exps = new ArrayList<>();
+          for (final DataExplorerView dataExplorerView : explorers) {
+            DataExplorerModel model = dataExplorerView.getDataExplorerModel();
+            if (model != null) {
+              List<Codec<MediaElement>> cList = model.getCodecPlugins();
+              if (cList != null && cList.contains(entry.getKey())) {
+                exps.add(dataExplorerView);
+              }
+            }
+          }
+
+          if (exps.isEmpty()) {
+            for (File file : vals) {
+              ViewerPluginBuilder.openSequenceInDefaultPlugin(file, true, true);
+            }
+          } else {
+            importInExplorer(exps, vals, dropLocation);
+          }
+        }
+        return true;
       }
-      return true;
+      return false;
     }
-    return false;
   }
 
   private void importInExplorer(
       List<DataExplorerView> exps, final List<File> vals, DropLocation dropLocation) {
     if (exps.size() == 1) {
-      exps.get(0).importFiles(vals.toArray(new File[0]), true);
+      exps.getFirst().importFiles(vals.toArray(new File[0]), true);
     } else {
       Point p;
       if (dropLocation == null) {
@@ -1171,47 +1260,46 @@ public class WeasisWin {
     if (opt.isSet("quit")) { // NON-NLS
       System.exit(0);
     } else if (opt.isSet("visible")) { // NON-NLS
-      GuiExecutor.instance()
-          .execute(
-              () -> {
-                Frame app = getFrame();
-                app.setVisible(true);
-                int state = app.getExtendedState();
-                state &= ~Frame.ICONIFIED;
-                app.setExtendedState(state);
-                app.setVisible(true);
-                /*
-                 * Sets the window to be "always on top" instead using toFront() method that does not always bring the
-                 * window to the front. It depends on the platform, Windows XP or Ubuntu has the facility to prevent
-                 * windows from stealing focus; instead it flashes the taskbar icon.
-                 */
-                if (app.isAlwaysOnTopSupported()) {
-                  app.setAlwaysOnTop(true);
+      GuiExecutor.execute(
+          () -> {
+            Frame app = getFrame();
+            app.setVisible(true);
+            int state = app.getExtendedState();
+            state &= ~Frame.ICONIFIED;
+            app.setExtendedState(state);
+            app.setVisible(true);
+            /*
+             * Sets the window to be "always on top" instead using toFront() method that does not always bring the
+             * window to the front. It depends on the platform, Windows XP or Ubuntu has the facility to prevent
+             * windows from stealing focus; instead it flashes the taskbar icon.
+             */
+            if (app.isAlwaysOnTopSupported()) {
+              app.setAlwaysOnTop(true);
 
-                  try {
-                    Thread.sleep(500L);
-                    Robot robot = new Robot();
-                    Point old = MouseInfo.getPointerInfo().getLocation();
-                    Point p = app.getLocationOnScreen();
-                    int x = p.x + app.getWidth() / 2;
-                    int y = p.y + app.getHeight() / 2;
-                    robot.mouseMove(x, y);
-                    // Simulate a mouse click
-                    robot.mousePress(InputEvent.BUTTON1_MASK);
-                    robot.mouseRelease(InputEvent.BUTTON1_MASK);
-                    robot.mouseMove(old.x, old.y);
-                  } catch (AWTException e1) {
-                    // DO nothing
-                  } catch (InterruptedException e) {
-                    Thread.currentThread().interrupt();
-                  } finally {
-                    app.setAlwaysOnTop(false);
-                  }
+              try {
+                Thread.sleep(500L);
+                Robot robot = new Robot();
+                Point old = MouseInfo.getPointerInfo().getLocation();
+                Point p = app.getLocationOnScreen();
+                int x = p.x + app.getWidth() / 2;
+                int y = p.y + app.getHeight() / 2;
+                robot.mouseMove(x, y);
+                // Simulate a mouse click
+                robot.mousePress(InputEvent.BUTTON1_MASK);
+                robot.mouseRelease(InputEvent.BUTTON1_MASK);
+                robot.mouseMove(old.x, old.y);
+              } catch (AWTException e1) {
+                // DO nothing
+              } catch (InterruptedException e) {
+                Thread.currentThread().interrupt();
+              } finally {
+                app.setAlwaysOnTop(false);
+              }
 
-                } else {
-                  app.toFront();
-                }
-              });
+            } else {
+              app.toFront();
+            }
+          });
 
     } else {
       opt.usage();
