@@ -11,13 +11,15 @@ package org.weasis.dicom.explorer;
 
 import bibliothek.gui.dock.common.CLocation;
 import bibliothek.gui.dock.common.mode.ExtendedMode;
+import bibliothek.gui.dock.control.focus.DefaultFocusRequest;
 import com.formdev.flatlaf.ui.FlatUIUtils;
 import java.awt.Color;
 import java.awt.Component;
 import java.awt.Dimension;
-import java.awt.FlowLayout;
 import java.awt.Point;
 import java.awt.Rectangle;
+import java.awt.event.ComponentAdapter;
+import java.awt.event.ComponentEvent;
 import java.awt.event.ItemEvent;
 import java.awt.event.ItemListener;
 import java.awt.font.FontRenderContext;
@@ -34,9 +36,9 @@ import java.util.Set;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutionException;
 import java.util.concurrent.FutureTask;
+import java.util.function.Function;
 import javax.swing.Action;
 import javax.swing.BorderFactory;
-import javax.swing.BoxLayout;
 import javax.swing.ButtonGroup;
 import javax.swing.Icon;
 import javax.swing.JButton;
@@ -47,6 +49,7 @@ import javax.swing.JPanel;
 import javax.swing.JPopupMenu;
 import javax.swing.JScrollPane;
 import javax.swing.JViewport;
+import javax.swing.ScrollPaneConstants;
 import javax.swing.SwingConstants;
 import javax.swing.SwingUtilities;
 import javax.swing.border.TitledBorder;
@@ -56,9 +59,11 @@ import org.slf4j.LoggerFactory;
 import org.weasis.core.api.explorer.DataExplorerView;
 import org.weasis.core.api.explorer.ObservableEvent;
 import org.weasis.core.api.explorer.model.DataExplorerModel;
+import org.weasis.core.api.gui.Insertable;
 import org.weasis.core.api.gui.util.ActionW;
 import org.weasis.core.api.gui.util.GuiExecutor;
 import org.weasis.core.api.gui.util.GuiUtils;
+import org.weasis.core.api.media.data.MediaElement;
 import org.weasis.core.api.media.data.MediaSeries;
 import org.weasis.core.api.media.data.MediaSeriesGroup;
 import org.weasis.core.api.media.data.MediaSeriesGroupNode;
@@ -66,23 +71,26 @@ import org.weasis.core.api.media.data.Series;
 import org.weasis.core.api.media.data.SeriesThumbnail;
 import org.weasis.core.api.media.data.TagW;
 import org.weasis.core.api.media.data.Thumbnail;
-import org.weasis.core.api.service.BundleTools;
 import org.weasis.core.api.util.FontItem;
 import org.weasis.core.api.util.ResourceUtil;
 import org.weasis.core.api.util.ResourceUtil.OtherIcon;
+import org.weasis.core.api.util.ResourceUtil.ResourceIconPath;
 import org.weasis.core.ui.docking.PluginTool;
 import org.weasis.core.ui.editor.SeriesViewer;
 import org.weasis.core.ui.editor.SeriesViewerEvent;
 import org.weasis.core.ui.editor.SeriesViewerEvent.EVENT;
 import org.weasis.core.ui.editor.SeriesViewerListener;
 import org.weasis.core.ui.editor.image.ImageViewerPlugin;
+import org.weasis.core.ui.editor.image.SequenceHandler;
 import org.weasis.core.ui.editor.image.ViewCanvas;
 import org.weasis.core.ui.editor.image.ViewerPlugin;
 import org.weasis.core.ui.util.ArrayListComboBoxModel;
 import org.weasis.core.ui.util.DefaultAction;
 import org.weasis.core.ui.util.TitleMenuItem;
 import org.weasis.core.ui.util.WrapLayout;
+import org.weasis.dicom.codec.DicomImageElement;
 import org.weasis.dicom.codec.DicomSpecialElement;
+import org.weasis.dicom.codec.HiddenSeriesManager;
 import org.weasis.dicom.codec.KOSpecialElement;
 import org.weasis.dicom.codec.TagD;
 import org.weasis.dicom.codec.TagD.Level;
@@ -92,6 +100,13 @@ import org.weasis.dicom.explorer.wado.LoadSeries;
 public class DicomExplorer extends PluginTool implements DataExplorerView, SeriesViewerListener {
 
   private static final org.slf4j.Logger LOGGER = LoggerFactory.getLogger(DicomExplorer.class);
+
+  public enum ListPosition {
+    FIRST,
+    PREVIOUS,
+    NEXT,
+    LAST
+  }
 
   public static final String NAME = Messages.getString("DicomExplorer.title");
   public static final String PREFERENCE_NODE = "dicom.explorer";
@@ -116,17 +131,6 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       new ArrayListComboBoxModel<>(DicomSorter.STUDY_COMPARATOR);
   private final JComboBox<?> patientCombobox = new JComboBox<>(modelPatient);
   private final JComboBox<?> studyCombobox = new JComboBox<>(modelStudy);
-  private final transient ItemListener patientChangeListener =
-      e -> {
-        if (e.getStateChange() == ItemEvent.SELECTED) {
-          Object item = modelPatient.getSelectedItem();
-          if (item instanceof MediaSeriesGroupNode patient) {
-            selectPatient(patient);
-          }
-          selectedPatient.revalidate();
-          selectedPatient.repaint();
-        }
-      };
   private final transient ItemListener studyItemListener =
       e -> {
         if (e.getStateChange() == ItemEvent.SELECTED) {
@@ -145,15 +149,25 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   }
 
   public DicomExplorer(DicomModel model) {
-    super(BUTTON_NAME, NAME, POSITION.WEST, ExtendedMode.NORMALIZED, PluginTool.Type.EXPLORER, 20);
+    super(NAME, POSITION.WEST, ExtendedMode.NORMALIZED, Insertable.Type.EXPLORER, 20);
     dockable.setMaximizable(true);
     this.model = model == null ? new DicomModel() : model;
     this.selectionList = new SeriesSelectionModel(selectedPatient);
     int thumbnailSize =
-        BundleTools.SYSTEM_PREFERENCES.getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
+        GuiUtils.getUICore()
+            .getSystemPreferences()
+            .getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
     setDockableWidth(Math.max(thumbnailSize, Thumbnail.DEFAULT_SIZE) + 42);
 
     patientCombobox.setMaximumRowCount(15);
+    ItemListener patientChangeListener =
+        e -> {
+          if (e.getStateChange() == ItemEvent.SELECTED) {
+            selectPatient(getSelectedPatient());
+            selectedPatient.revalidate();
+            selectedPatient.repaint();
+          }
+        };
     patientCombobox.addItemListener(patientChangeListener);
     studyCombobox.setMaximumRowCount(15);
     // do not use addElement
@@ -164,7 +178,10 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     thumbnailView.setBorder(BorderFactory.createEmptyBorder()); // remove default line
     thumbnailView.getVerticalScrollBar().setUnitIncrement(16);
     thumbnailView.setViewportView(selectedPatient);
+    thumbnailView.setVerticalScrollBarPolicy(ScrollPaneConstants.VERTICAL_SCROLLBAR_AS_NEEDED);
+    thumbnailView.setHorizontalScrollBarPolicy(ScrollPaneConstants.HORIZONTAL_SCROLLBAR_NEVER);
     changeToolWindowAnchor(getDockable().getBaseLocation());
+    setTransferHandler(new SeriesHandler());
   }
 
   public SeriesSelectionModel getSelectionList() {
@@ -172,7 +189,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   }
 
   private void removePatientPane(MediaSeriesGroup patient) {
-    if (patient != null && selectedPatient.isPatient(patient)) {
+    if (patient != null) {
       List<StudyPane> studies = patient2study.remove(patient);
       if (studies != null) {
         for (StudyPane studyPane : studies) {
@@ -186,6 +203,9 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
         modelStudy.setSelectedItem(ALL_STUDIES);
         koOpen.setVisible(false);
       }
+      if (selectedPatient.isPatient(patient)) {
+        selectedPatient.patient = null;
+      }
     }
   }
 
@@ -193,7 +213,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     MediaSeriesGroup patient = model.getParent(study, DicomModel.patient);
     List<StudyPane> studies = patient2study.get(patient);
     if (studies != null) {
-      for (int i = 0; i < studies.size(); i++) {
+      for (int i = studies.size() - 1; i >= 0; i--) {
         StudyPane st = studies.get(i);
         if (st.isStudy(study)) {
           studies.remove(i);
@@ -221,7 +241,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     MediaSeriesGroup study = model.getParent(series, DicomModel.study);
     List<SeriesPane> seriesList = study2series.get(study);
     if (seriesList != null) {
-      for (int j = 0; j < seriesList.size(); j++) {
+      for (int j = seriesList.size() - 1; j >= 0; j--) {
         SeriesPane se = seriesList.get(j);
         if (se.isSeries(series)) {
           seriesList.remove(j);
@@ -300,6 +320,258 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       }
     }
     return null;
+  }
+
+  private MediaSeriesGroupNode getPatient(Object item) {
+    if (item instanceof MediaSeriesGroupNode patient) {
+      return patient;
+    }
+    return null;
+  }
+
+  public MediaSeriesGroupNode getSelectedPatient() {
+    return getPatient(modelPatient.getSelectedItem());
+  }
+
+  public MediaSeries<? extends MediaElement> movePatient(
+      ViewCanvas<DicomImageElement> view, ListPosition position) {
+    if (view != null) {
+      MediaSeriesGroup patientGroup;
+      MediaSeriesGroup seriesGroup;
+      MediaSeriesGroup series = view.getSeries();
+      if (series == null) {
+        seriesGroup = getSeries(null, null, ListPosition.FIRST);
+        MediaSeriesGroup studyGroup = model.getParent(seriesGroup, DicomModel.study);
+        patientGroup = model.getParent(studyGroup, DicomModel.patient);
+      } else {
+        MediaSeriesGroup studyGroup = model.getParent(series, DicomModel.study);
+        patientGroup = model.getParent(studyGroup, DicomModel.patient);
+        seriesGroup = getSeriesGroupFromPatient(patientGroup, position);
+      }
+
+      if (seriesGroup instanceof MediaSeries<?> dicomSeries) {
+        if (isPatientHasOpenSeries(patientGroup)) {
+          displaySeries(view, seriesGroup);
+        } else {
+          ThumbnailMouseAndKeyAdapter.openSeriesInDefaultPlugin(
+              model, (MediaSeries<? extends MediaElement>) dicomSeries);
+        }
+        return (MediaSeries<? extends MediaElement>) dicomSeries;
+      }
+    }
+    return null;
+  }
+
+  public MediaSeriesGroup getSeriesGroupFromPatient(
+      MediaSeriesGroup patientGroup, ListPosition position) {
+    MediaSeriesGroup seriesGroup;
+    if (patientGroup == null) {
+      seriesGroup = getSeries(null, null, ListPosition.FIRST);
+    } else {
+      MediaSeriesGroup patient = getPatientFromList(patientGroup, position);
+      seriesGroup = getSeries(getFirstStudy(patient), null, ListPosition.FIRST);
+    }
+    return seriesGroup;
+  }
+
+  private MediaSeriesGroup getPatientFromList(
+      MediaSeriesGroup patientGroup, ListPosition position) {
+    if (patientGroup == null) {
+      return getSelectedPatient();
+    } else {
+      if (modelPatient.getSize() > 0) {
+        int index = 0;
+        if (position == ListPosition.LAST) {
+          index = modelPatient.getSize() - 1;
+        } else if (position == ListPosition.PREVIOUS) {
+          index = getPatientIndex(patientGroup) - 1;
+        } else if (position == ListPosition.NEXT) {
+          index = getPatientIndex(patientGroup) + 1;
+        }
+        if (index >= 0 && index < modelPatient.getSize()) {
+          Object object = modelPatient.getElementAt(index);
+          if (object instanceof MediaSeriesGroupNode patient) {
+            return patient;
+          }
+        }
+      }
+    }
+    return null;
+  }
+
+  private int getPatientIndex(MediaSeriesGroup patientGroup) {
+    if (patientGroup != null) {
+      synchronized (modelPatient) {
+        for (int i = 0; i < modelPatient.getSize(); i++) {
+          if (patientGroup.equals(modelPatient.getElementAt(i))) {
+            return i;
+          }
+        }
+      }
+    }
+    return 0;
+  }
+
+  private MediaSeriesGroup getFirstStudy(MediaSeriesGroup patientGroup) {
+    List<StudyPane> studyList = getStudyList(patientGroup);
+    if (studyList != null && !studyList.isEmpty()) {
+      return studyList.getFirst().dicomStudy;
+    }
+    return null;
+  }
+
+  public MediaSeries<? extends MediaElement> moveStudy(
+      ViewCanvas<DicomImageElement> view, ListPosition position) {
+    if (view != null) {
+      MediaSeriesGroup seriesGroup;
+      MediaSeriesGroup series = view.getSeries();
+      if (series == null) {
+        seriesGroup = getSeries(null, null, ListPosition.FIRST);
+      } else {
+        seriesGroup = getSeriesGroupFromStudy(model.getParent(series, DicomModel.study), position);
+      }
+      return displaySeries(view, seriesGroup);
+    }
+    return null;
+  }
+
+  public MediaSeriesGroup getSeriesGroupFromStudy(
+      MediaSeriesGroup studyGroup, ListPosition position) {
+    MediaSeriesGroup seriesGroup;
+    if (studyGroup == null) {
+      seriesGroup = getSeries(null, null, ListPosition.FIRST);
+    } else {
+      MediaSeriesGroup study = getStudyFromList(studyGroup, position);
+      seriesGroup = getSeries(study, null, ListPosition.FIRST);
+    }
+    return seriesGroup;
+  }
+
+  private List<StudyPane> getStudyList(MediaSeriesGroup patient) {
+    MediaSeriesGroupNode patientNode = getPatient(patient);
+    if (patient == null) {
+      patientNode = getSelectedPatient();
+    }
+    return patient2study.get(patientNode);
+  }
+
+  private MediaSeriesGroup getStudyFromList(MediaSeriesGroup studyGroup, ListPosition position) {
+    MediaSeriesGroup patientGroup = model.getParent(studyGroup, DicomModel.patient);
+    if (patientGroup == null || studyGroup == null) {
+      return getFirstStudy(patientGroup);
+    } else {
+      List<StudyPane> studyPanes = patient2study.get(patientGroup);
+      if (studyPanes != null && !studyPanes.isEmpty()) {
+        int index = 0;
+        if (position == ListPosition.LAST) {
+          index = studyPanes.size() - 1;
+        } else if (position == ListPosition.PREVIOUS) {
+          index = getStudyIndex(studyPanes, studyGroup) - 1;
+        } else if (position == ListPosition.NEXT) {
+          index = getStudyIndex(studyPanes, studyGroup) + 1;
+        }
+        if (index >= 0 && index < studyPanes.size()) {
+          return studyPanes.get(index).dicomStudy;
+        }
+      }
+    }
+    return null;
+  }
+
+  private int getStudyIndex(List<StudyPane> seriesList, MediaSeriesGroup studyGroup) {
+    if (seriesList != null && !seriesList.isEmpty()) {
+      for (int i = 0; i < seriesList.size(); i++) {
+        StudyPane se = seriesList.get(i);
+        if (se.isStudy(studyGroup)) {
+          return i;
+        }
+      }
+    }
+    return 0;
+  }
+
+  public MediaSeries<? extends MediaElement> moveSeries(
+      ViewCanvas<DicomImageElement> view, ListPosition position) {
+    if (view != null) {
+      MediaSeriesGroup seriesGroup = getSeriesGroup(view.getSeries(), position);
+      return displaySeries(view, seriesGroup);
+    }
+    return null;
+  }
+
+  private MediaSeries<? extends MediaElement> displaySeries(
+      ViewCanvas<DicomImageElement> view, MediaSeriesGroup seriesGroup) {
+    if (view != null && seriesGroup instanceof MediaSeries<?> dicomSeries) {
+      view.setSeries(null);
+      view.setSeries((MediaSeries<DicomImageElement>) dicomSeries, null);
+      return (MediaSeries<? extends MediaElement>) dicomSeries;
+    }
+    return null;
+  }
+
+  public MediaSeriesGroup getSeriesGroup(MediaSeriesGroup series, ListPosition position) {
+    MediaSeriesGroup seriesGroup;
+    if (series == null) {
+      seriesGroup = getSeries(null, null, position);
+    } else {
+      MediaSeriesGroup studyGroup = model.getParent(series, DicomModel.study);
+      seriesGroup = getSeries(studyGroup, series, position);
+    }
+    return seriesGroup;
+  }
+
+  private MediaSeriesGroup getSeries(
+      MediaSeriesGroup studyGroup, MediaSeriesGroup series, ListPosition position) {
+    if (studyGroup == null || series == null) {
+      List<StudyPane> studyList;
+      if (studyGroup == null) {
+        studyList = getStudyList(null);
+      } else {
+        return getSeriesFromList(studyGroup, null, ListPosition.FIRST);
+      }
+      if (studyList != null) {
+        for (StudyPane studyPane : studyList) {
+          List<SeriesPane> seriesList = study2series.get(studyPane.dicomStudy);
+          if (seriesList != null && !seriesList.isEmpty()) {
+            return seriesList.getFirst().sequence;
+          }
+        }
+      }
+    } else {
+      return getSeriesFromList(studyGroup, series, position);
+    }
+    return null;
+  }
+
+  private MediaSeriesGroup getSeriesFromList(
+      MediaSeriesGroup studyGroup, MediaSeriesGroup series, ListPosition position) {
+    List<SeriesPane> seriesList = study2series.get(studyGroup);
+    if (seriesList != null && !seriesList.isEmpty()) {
+      int index = 0;
+      if (position == ListPosition.LAST) {
+        index = seriesList.size() - 1;
+      } else if (position == ListPosition.PREVIOUS) {
+        index = getSeriesIndex(seriesList, series) - 1;
+      } else if (position == ListPosition.NEXT) {
+        index = getSeriesIndex(seriesList, series) + 1;
+      }
+      if (index >= 0 && index < seriesList.size()) {
+        return seriesList.get(index).sequence;
+      }
+    }
+    return null;
+  }
+
+  private int getSeriesIndex(List<SeriesPane> seriesList, MediaSeriesGroup series) {
+    if (seriesList != null && !seriesList.isEmpty()) {
+      for (int i = 0; i < seriesList.size(); i++) {
+        SeriesPane se = seriesList.get(i);
+        if (se.isSeries(series)) {
+          return i;
+        }
+      }
+    }
+    return 0;
   }
 
   private synchronized SeriesPane createSeriesPaneInstance(
@@ -385,11 +657,15 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     }
 
     private void refreshLayout() {
-      this.setLayout(new BoxLayout(this, verticalLayout ? BoxLayout.Y_AXIS : BoxLayout.X_AXIS));
+      this.setLayout(
+          verticalLayout
+              ? new MigLayout("fillx, flowy, insets 0", "[fill]")
+              : new MigLayout("fillx, flowx, insets 0", "[fill]"));
       List<StudyPane> studies = getStudyPaneList();
       super.removeAll();
       for (StudyPane studyPane : studies) {
-        studyPane.refreshLayout();
+        // Force to resize study pane
+        studyPane.setSize(50, 50);
         if (studyPane.getComponentCount() > 0) {
           addPane(studyPane);
         }
@@ -404,7 +680,6 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       if (studies != null) {
         for (StudyPane studyPane : studies) {
           studyPane.showAllSeries();
-          studyPane.refreshLayout();
           if (studyPane.getComponentCount() > 0) {
             addPane(studyPane);
           }
@@ -425,25 +700,51 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
 
   class StudyPane extends JPanel {
 
+    private final JPanel sub = new JPanel(new WrapLayout());
     final MediaSeriesGroup dicomStudy;
     private final TitledBorder title;
 
     public StudyPane(MediaSeriesGroup dicomStudy) {
+      super(new MigLayout("fillx, flowy, insets 0", "[fill]")); // NON-NLS
       if (dicomStudy == null) {
         throw new IllegalArgumentException("Study cannot be null");
       }
-      this.setAlignmentX(LEFT_ALIGNMENT);
-      this.setAlignmentY(TOP_ALIGNMENT);
       this.dicomStudy = dicomStudy;
       title = GuiUtils.getTitledBorder(dicomStudy.toString());
       this.setBorder(
           BorderFactory.createCompoundBorder(GuiUtils.getEmptyBorder(0, 3, 0, 3), title));
       this.setFocusable(false);
+      this.add(sub, "shrinky 100");
+      this.addComponentListener(
+          new ComponentAdapter() {
+            @Override
+            public void componentResized(ComponentEvent e) {
+              refreshLayout();
+              StudyPane.this.revalidate();
+              StudyPane.this.getParent().repaint();
+            }
+          });
+    }
+
+    @Override
+    public void remove(int index) {
+      sub.remove(index);
       refreshLayout();
     }
 
+    @Override
+    public void remove(Component comp) {
+      sub.remove(comp);
+      refreshLayout();
+    }
+
+    public void refreshLayout() {
+      WrapLayout wl = (WrapLayout) sub.getLayout();
+      sub.setPreferredSize(wl.preferredLayoutSize(sub));
+    }
+
     public boolean isSeriesVisible(MediaSeriesGroup series) {
-      for (Component c : this.getComponents()) {
+      for (Component c : sub.getComponents()) {
         if (c instanceof SeriesPane seriesPane && seriesPane.isSeries(series)) {
           return true;
         }
@@ -453,7 +754,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
 
     List<SeriesPane> getSeriesPaneList() {
       ArrayList<SeriesPane> seriesPaneList = new ArrayList<>();
-      for (Component c : this.getComponents()) {
+      for (Component c : sub.getComponents()) {
         if (c instanceof SeriesPane seriesPane) {
           seriesPaneList.add(seriesPane);
         }
@@ -461,18 +762,18 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       return seriesPaneList;
     }
 
-    private void refreshLayout() {
-      this.setLayout(
-          verticalLayout ? new WrapLayout(FlowLayout.LEFT) : new BoxLayout(this, BoxLayout.X_AXIS));
+    private void clearAllSeries() {
+      sub.removeAll();
     }
 
     private void showAllSeries() {
-      super.removeAll();
+      clearAllSeries();
       List<SeriesPane> seriesList = study2series.get(dicomStudy);
       if (seriesList != null) {
         int thumbnailSize =
-            BundleTools.SYSTEM_PREFERENCES.getIntProperty(
-                Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
+            GuiUtils.getUICore()
+                .getSystemPreferences()
+                .getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
         for (int i = 0; i < seriesList.size(); i++) {
           SeriesPane series = seriesList.get(i);
           series.updateSize(thumbnailSize);
@@ -484,7 +785,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
 
     public void addPane(SeriesPane seriesPane, int index, int thumbnailSize) {
       seriesPane.updateSize(thumbnailSize);
-      add(seriesPane, index);
+      sub.add(seriesPane, index);
       updateText();
     }
 
@@ -504,10 +805,12 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
 
     public SeriesPane(MediaSeriesGroup sequence) {
       this.sequence = Objects.requireNonNull(sequence);
-      this.setLayout(new BoxLayout(this, BoxLayout.Y_AXIS));
+      this.setLayout(new MigLayout("wrap 1", "[center]"));
       this.setBackground(FlatUIUtils.getUIColor(SeriesSelectionModel.BACKGROUND, Color.LIGHT_GRAY));
       int thumbnailSize =
-          BundleTools.SYSTEM_PREFERENCES.getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
+          GuiUtils.getUICore()
+              .getSystemPreferences()
+              .getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
       if (sequence instanceof Series series) {
         Thumbnail thumb = (Thumbnail) series.getTagValue(TagW.Thumbnail);
         if (thumb == null) {
@@ -516,8 +819,6 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
         }
         Optional.ofNullable(thumb).ifPresent(this::add);
       }
-      this.setAlignmentX(LEFT_ALIGNMENT);
-      this.setAlignmentY(TOP_ALIGNMENT);
       String desc = TagD.getTagValue(sequence, Tag.SeriesDescription, String.class);
       label = new JLabel(desc == null ? "" : desc, SwingConstants.CENTER);
       label.setFont(FontItem.MINI.getFont());
@@ -589,10 +890,10 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
                 selectedPatient == null ? null : selectedPatient.patient;
             if (patient != null && e.getSource() instanceof JButton button) {
               List<KOSpecialElement> list =
-                  DicomModel.getSpecialElements(patient, KOSpecialElement.class);
+                  HiddenSeriesManager.getHiddenElementsFromPatient(KOSpecialElement.class, patient);
               if (!list.isEmpty()) {
                 if (list.size() == 1) {
-                  model.openRelatedSeries(list.get(0), patient);
+                  model.openRelatedSeries(list.getFirst(), patient);
                 } else {
                   list.sort(DicomSpecialElement.ORDER_BY_DATE);
                   JPopupMenu popupMenu = new JPopupMenu();
@@ -672,7 +973,8 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       }
       studyCombobox.addItemListener(studyItemListener);
       selectStudy();
-      koOpen.setVisible(DicomModel.hasSpecialElements(patient, KOSpecialElement.class));
+      koOpen.setVisible(
+          HiddenSeriesManager.hasHiddenSpecialElements(KOSpecialElement.class, patient));
       // Send message for selecting related plug-ins window
       model.firePropertyChange(
           new ObservableEvent(ObservableEvent.BasicAction.SELECT, model, null, patient));
@@ -733,8 +1035,10 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
     }
     if (repaintStudy) {
       int thumbnailSize =
-          BundleTools.SYSTEM_PREFERENCES.getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
-      studyPane.removeAll();
+          GuiUtils.getUICore()
+              .getSystemPreferences()
+              .getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
+      studyPane.clearAllSeries();
       for (int i = 0, k = 1; i < seriesList.size(); i++) {
         SeriesPane s = seriesList.get(i);
         studyPane.addPane(s, i, thumbnailSize);
@@ -743,9 +1047,9 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           k++;
         }
       }
-
       studyPane.revalidate();
       studyPane.repaint();
+      changeToolWindowAnchor(getDockable().getBaseLocation());
     } else {
       int k = 1;
       for (SeriesPane s : seriesList) {
@@ -776,7 +1080,6 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       StudyPane studyPane = getStudyPane(selectedStudy);
       if (studyPane != null) {
         studyPane.showAllSeries();
-        studyPane.refreshLayout();
         selectedPatient.addPane(studyPane);
         studyPane.doLayout();
       }
@@ -791,7 +1094,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   }
 
   private void addDicomSeries(Series<?> series) {
-    if (DicomModel.isSpecialModality(series)) {
+    if (DicomModel.isHiddenModality(series)) {
       // Up to now nothing has to be done in the explorer view about specialModality
       return;
     }
@@ -801,6 +1104,9 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
 
     if (modelPatient.getIndexOf(patient) < 0) {
       modelPatient.addElement(patient);
+      if (modelPatient.getSize() == 1) {
+        modelPatient.setSelectedItem(patient);
+      }
     }
 
     List<StudyPane> studies = patient2study.computeIfAbsent(patient, k -> new ArrayList<>());
@@ -828,9 +1134,10 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
       }
       if (selectedPatient.isStudyVisible(study)) {
         int thumbnailSize =
-            BundleTools.SYSTEM_PREFERENCES.getIntProperty(
-                Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
-        studyPane.removeAll();
+            GuiUtils.getUICore()
+                .getSystemPreferences()
+                .getIntProperty(Thumbnail.KEY_SIZE, Thumbnail.DEFAULT_SIZE);
+        studyPane.clearAllSeries();
         for (int i = 0; i < seriesList.size(); i++) {
           studyPane.addPane(seriesList.get(i), i, thumbnailSize);
         }
@@ -889,6 +1196,11 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
             MediaSeriesGroup patient = model.getParent(dcm, DicomModel.patient);
             if (!isSelectedPatient(patient)) {
               modelPatient.setSelectedItem(patient);
+              GuiUtils.getUICore()
+                  .getDockingControl()
+                  .getController()
+                  .setFocusedDockable(
+                      new DefaultFocusRequest(dockable.intern(), this, false, true, false));
             }
           }
         } else if (ObservableEvent.BasicAction.ADD.equals(action)) {
@@ -920,7 +1232,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
               MediaSeriesGroup study = model.getParent(dcm, DicomModel.study);
               StudyPane studyPane = getStudyPane(study);
               if (studyPane != null) {
-                if (!DicomModel.isSpecialModality(dcm)) {
+                if (!DicomModel.isHiddenModality(dcm)) {
                   SeriesPane pane = getSeriesPane(dcm);
                   if (pane != null) {
                     pane.updateText();
@@ -939,10 +1251,10 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
               updateSplitSeries(series);
             }
           } else if (newVal instanceof KOSpecialElement) {
-            Object item = modelPatient.getSelectedItem();
-            if (item instanceof MediaSeriesGroupNode) {
+            MediaSeriesGroupNode patient = getSelectedPatient();
+            if (patient != null) {
               koOpen.setVisible(
-                  DicomModel.hasSpecialElements((MediaSeriesGroup) item, KOSpecialElement.class));
+                  HiddenSeriesManager.hasHiddenSpecialElements(KOSpecialElement.class, patient));
             }
           }
         } else if (ObservableEvent.BasicAction.LOADING_START.equals(action)) {
@@ -954,10 +1266,10 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           if (newVal instanceof ExplorerTask) {
             removeTaskToGlobalProgression((ExplorerTask<?, ?>) newVal);
           }
-          Object item = modelPatient.getSelectedItem();
-          if (item instanceof MediaSeriesGroupNode) {
+          MediaSeriesGroupNode patient = getSelectedPatient();
+          if (patient != null) {
             koOpen.setVisible(
-                DicomModel.hasSpecialElements((MediaSeriesGroup) item, KOSpecialElement.class));
+                HiddenSeriesManager.hasHiddenSpecialElements(KOSpecialElement.class, patient));
           }
         }
       } else if (evt.getSource() instanceof SeriesViewer
@@ -1016,32 +1328,31 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   }
 
   public synchronized void addTaskToGlobalProgression(final ExplorerTask task) {
-    GuiExecutor.instance()
-        .invokeAndWait(
-            () -> {
-              loadingPanel.addTask(task);
-              revalidate();
-              repaint();
-            });
+    GuiExecutor.invokeAndWait(
+        () -> {
+          loadingPanel.addTask(task);
+          revalidate();
+          repaint();
+        });
   }
 
   public synchronized void removeTaskToGlobalProgression(final ExplorerTask task) {
-    GuiExecutor.instance()
-        .invokeAndWait(
-            () -> {
-              if (loadingPanel.removeTask(task)) {
-                revalidate();
-                repaint();
-              }
-            });
+    GuiExecutor.invokeAndWait(
+        () -> {
+          if (loadingPanel.removeTask(task)) {
+            revalidate();
+            repaint();
+          }
+        });
   }
 
   public static SeriesThumbnail createThumbnail(
-      final Series series, final DicomModel dicomModel, final int thumbnailSize) {
+      final Series<?> series, final DicomModel dicomModel, final int thumbnailSize) {
 
     Callable<SeriesThumbnail> callable =
         () -> {
-          final SeriesThumbnail thumb = new SeriesThumbnail(series, thumbnailSize);
+          Function<String, Set<ResourceIconPath>> drawIcons = HiddenSeriesManager::getRelatedIcons;
+          final SeriesThumbnail thumb = new SeriesThumbnail(series, thumbnailSize, drawIcons);
           if (series.getSeriesLoader() instanceof LoadSeries loader) {
             // In case series is downloaded or canceled
             thumb.setProgressBar(loader.isDone() ? null : loader.getProgressBar());
@@ -1054,7 +1365,7 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
           return thumb;
         };
     FutureTask<SeriesThumbnail> future = new FutureTask<>(callable);
-    GuiExecutor.instance().invokeAndWait(future);
+    GuiExecutor.invokeAndWait(future);
     SeriesThumbnail result = null;
     try {
       result = future.get();
@@ -1070,8 +1381,10 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   @Override
   public void importFiles(File[] files, boolean recursive) {
     if (files != null) {
+      OpeningViewer openingViewer =
+          OpeningViewer.getOpeningViewerByLocalKey(LocalImport.LAST_OPEN_VIEWER_MODE);
       DicomModel.LOADING_EXECUTOR.execute(
-          new LoadLocalDicom(files, recursive, model, OpeningViewer.ONE_PATIENT));
+          new LoadLocalDicom(files, recursive, model, openingViewer));
     }
   }
 
@@ -1098,5 +1411,16 @@ public class DicomExplorer extends PluginTool implements DataExplorerView, Serie
   @Override
   public boolean canImportFiles() {
     return true;
+  }
+
+  private class SeriesHandler extends SequenceHandler {
+    public SeriesHandler() {
+      super(false, true);
+    }
+
+    @Override
+    protected boolean dropFiles(List<File> files, TransferSupport support) {
+      return DicomSeriesHandler.dropDicomFiles(files);
+    }
   }
 }
